...
    }
  }, [resetKey]);

  return (
    <MainScrollView
      headerImage="free-search-bkg"
      headerTitle="Free Search"
      scrollRef={scrollRef}
    >
      <View style={{ paddingBottom: theme.padding.large }}>
        <FreeSearchForm
          key={resetKey}
          onSearchResults={handleSearchResults}
...
        contentStyle={{ width: "85%" }}
      >
        <ThemedText
          type="h4"
          style={{ paddingTop: theme.padding.small, paddingBottom: theme.padding.xsmall }}
        >
          No cards found
        </ThemedText>
      </ThemedModal>
    </MainScrollView>
  );
}

...
