...
}

export default function ThemedModal({
  visible,
  onClose,
  children,
  buttonText = "Close",
  buttonType = "main",
  buttonSize = "large",
  contentStyle,
  onCancelText,
  onCancel,
  onConfirm,
...
