...
        .map((row) => row[column])
        .filter(Boolean)
    )
  );
}

const STAGE_POKEMON = ["Basic", "Stage 1", "Stage 2"];

const uniqueIdentifiers = {
  cardSupertype: getUniqueValues("Card", "supertype"),
  // Remove "Basic", "Stage 1", "Stage 2" from cardSubtypes
  cardSubtypes: getUniqueValues("Card", "subtypes").filter((s) => !STAGE_POKEMON.includes(s)),
  cardTypes: getUniqueValues("Card", "types"),
...
